--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,6 @@ spring.datasource.password=2002Pelusa14190-
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
 # Redis
@@ -17,5 +16,5 @@ spring.data.redis.port=6379
 spring.data.redis.timeout=60000
 spring.cache.type=redis
 # JWT config
-jwt.secret=1234567891011121314151617181920
+jwt.secret="afwef234567891011121314151617181920"
 jwt.expiration=86400000
