--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,36 @@
 spring.application.name=boardang
-server.port=8080
-# Datasource (MySQL connection)
-spring.datasource.url=jdbc:mysql://localhost:3306/boardang_login?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=2002Pelusa14190-
-# Driver de MySQL
+server.port=${SERVER_PORT:8080}
+
+# =====================
+# MySQL
+# =====================
+spring.datasource.url=${MYSQL_URL}
+spring.datasource.username=${MYSQL_USER}
+spring.datasource.password=${MYSQL_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# =====================
 # JPA / Hibernate
+# =====================
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
-# Redis
-spring.data.redis.host=localhost
-spring.data.redis.port=6379
-spring.data.redis.timeout=60000
+
+# =====================
+# MongoDB
+# =====================
+spring.data.mongodb.uri=${MONGO_URI}
+
+# =====================
+# Redis (Cache)
+# =====================
+spring.data.redis.host=${REDIS_HOST:localhost}
+spring.data.redis.port=${REDIS_PORT:6379}
+spring.data.redis.timeout=${REDIS_TIMEOUT:60000}
 spring.cache.type=redis
-# JWT config
-jwt.secret="afwef234567891011121314151617181920"
-jwt.expiration=86400000
+
+# =====================
+# JWT (Auth)
+# =====================
+jwt.secret=${JWT_SECRET}
+jwt.expiration=${JWT_EXPIRATION:86400000}
